# typst-bot

./: .gitignore  Cargo.toml
src/: main.rs  world.rs
src/calc/: mod.rs
src/calc/python/: lexer.rs  parser.rs
