[package]
name = "typst-bot"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comemo = { git = "https://github.com/typst/comemo", version = "0.1.0" }
png = { version = "0.17.7", default-features = false }
poise = "0.5.2"
serenity = { version = "0.11.5", default-features = false, features = ["rustls_backend"] }
thiserror = "1.0.40"
tiny-skia = "0.6.6"
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.16"
typst = { git = "https://github.com/jakobrs/typst", branch = "personal", version = "0.0.0" }
typst-library = { git = "https://github.com/jakobrs/typst", branch = "personal", version = "0.0.0" }
