[package]
name = "typst-bot"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.2.0"
comemo = "0.3.0"
once_cell = "1.18.0"
png = { version = "0.17.7", default-features = false }
poise = "0.5.5"
regex = "1.9.3"
serenity = { version = "0.11.5", default-features = false, features = ["rustls_backend"] }
thiserror = "1.0.40"
tiny-skia = "0.6.6"
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
typst = { git = "https://github.com/typst/typst", version = "0.5.0" }
typst-library = { git = "https://github.com/typst/typst", version = "0.5.0" }
walkdir = "2.3.3"

[patch.crates-io]
hypher = { git = "https://github.com/jakobrs/hypher", branch = "no-nb-nn" }

[features]
default = ["embed-fonts", "load-fonts"]

embed-fonts = []
embed-emoji = ["embed-fonts"]
load-fonts = []
