[package]
name = "typst-bot"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.0"
comemo = "0.4.0"
once_cell = "1.19.0"
png = { version = "0.17.13", default-features = false }
poise = "0.6.1"
regex = "1.10.3"
serenity = { version = "0.12.1", default-features = false, features = ["rustls_backend"] }
thiserror = "1.0.58"
tiny-skia = "0.11.4"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typst = "0.11.0"
typst-render = "0.11.0"
walkdir = "2.5.0"

# [patch.crates-io]
# hypher = { git = "https://github.com/jakobrs/hypher", branch = "no-nb-nn" }

[features]
default = ["embed-fonts", "load-fonts"]

embed-fonts = []
embed-emoji = ["embed-fonts"]
load-fonts = []
